--- a/src/routes/startWorkoutPage/StartWorkoutPage.module.css
+++ b/src/routes/startWorkoutPage/StartWorkoutPage.module.css
@@ -1,4 +1,3 @@
-/* StartWorkoutPage.css */
 .container {
     display: flex;
     flex-direction: column;
@@ -14,6 +13,7 @@
 
 .button {
     width: 40%;
-    height: 3rem;
+    margin-top: 2rem;
+    height: 4rem;
     font-size: 16px;
 }
