Fixed styling of create template page.

--- a/src/routes/runWorkoutPage/RunWorkoutPage.module.css
+++ b/src/routes/runWorkoutPage/RunWorkoutPage.module.css
@@ -12,7 +12,7 @@
 
 .finishButton {
     margin: 1rem auto;
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
     width: 50%;
     height: 4rem;
 }
