--- a/src/routes/createTemplate/CreateTemplatePage.module.css
+++ b/src/routes/createTemplate/CreateTemplatePage.module.css
@@ -5,9 +5,6 @@
     align-items: center;
     margin: auto;
     width: 100%;
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid red;
 }
 
 form {
@@ -20,9 +17,6 @@ form {
     align-content: center;
     justify-content: center;
     width: 100%;
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid red;
 }
 
 .templateInfoContainer {
@@ -30,26 +24,23 @@ form {
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid black;
 }
 
-.inputContainer {
+.inputContainer,
+.exerciseList,
+.buttonContainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     width: 50%;
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid red;
 }
 
 .inputContainer label {
     font-weight: 500;
 }
 
-.userInput {
+.userInput,
+.createTemplateOption {
     min-height: 2rem;
     max-height: 4rem;
     min-width: 15rem;
@@ -64,22 +55,15 @@ form {
     justify-content: space-between;
     width: 100%;
     margin: 4rem 0;
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid blue;
 }
 
-.exerciseList {
-    width: 50%;
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid red;
-}
 
 .exerciseList:first-of-type,
-.inputContainer:first-of-type .createTemplateOption:first-of-type {
+.inputContainer:first-of-type,
+.buttonContainer:first-of-type {
     margin-right: 5rem;
 }
+
 
 .createTemplateOptions {
     display: flex;
@@ -90,18 +74,16 @@ form {
     margin: auto;
     margin-top: 1rem;
     color: var(--font-color-contrast);
-
-    /* TODO BORRAR RED BORDER */
-    border: 1px solid red;
 }
 
 .createTemplateOption {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50%;
-    max-width: 41rem;
-    height: 4rem;
+    /* width: 50%;
+    max-width: 41rem; */
+    max-height: 5rem;
+    height: 5rem;
     padding: 20px;
     text-align: center;
     background-color: var(--primary-color);
