--- a/src/components/exerciseTemplatePresenter/ExerciseTemplatePresenter.module.css
+++ b/src/components/exerciseTemplatePresenter/ExerciseTemplatePresenter.module.css
@@ -1,11 +1,14 @@
 .container {
     display: flex;
     justify-content: space-between;
+    margin: auto;
     background-color: var(--primary-color);
     border-radius: .8rem;
     border: var(--font-color-contrast) solid .15rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    width: clamp(23rem, 23rem, 23rem);
+    /* width: clamp(23rem, 23rem, 23rem); */
+    min-width: 90%;
+    max-width: 23rem;
     transition: all .1s;
     user-select: none;
     cursor: pointer;
@@ -27,7 +30,8 @@
     border-top-right-radius: .65rem;
     border-bottom-right-radius: .65rem;
     cursor: pointer;
-    width: 12%;
+    /* width: 12%; */
+    min-width: 3rem;
     font-weight: 600;
     /* Prevent text selection */
     user-select: none;
@@ -60,6 +64,7 @@
     justify-content: space-between;
     padding: .5rem 1rem;
     transition: all .1s;
+    width: 100%;
 }
 
 .exerciseTemplatePresenter * {
@@ -79,6 +84,6 @@
     font-size: var(--subheading-font-size);
 }
 
-.sets {
-    font-size: var(--subheading-font-size);
+.set {
+    font-size: var(--body-font-size);
 }
