--- a/src/components/genericList/GenericList.module.css
+++ b/src/components/genericList/GenericList.module.css
@@ -6,7 +6,7 @@
 
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    /* padding: 1rem; */
+    padding: 1rem;
     /* max-width: 700px; */
 
     /* Scroll bar */
