--- a/src/routes/createExercise/CreateExercisePage.module.css
+++ b/src/routes/createExercise/CreateExercisePage.module.css
@@ -1,79 +1,74 @@
 .createTemplatePageContainer {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  justify-content: space-between;
-  /* height: 100%; */
-  /* Set the height of the page to a percentage viewport height */
-  height: 70vh;
-  width: 90%;
+  margin: auto;
+  align-items: center;
+  justify-content: flex-start;
+  width: 95%;
 }
 
 .newExerciseContainer {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
-  height: 100%;
+  justify-content: stretch;
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
+  gap: 2rem;
 }
 
 .nameContainer {
   display: flex;
   flex-direction: column;
-  min-width: 25%;
-  max-width: 25%;
+  flex-grow: 1;
+  position: relative;
+  /* min-width: 25%;
+  max-width: 25%; */
   align-items: start;
 }
 
-/* Select input children of nameContainer */
-.nameContainer input {
-  min-width: 60%;
-  max-width: 75%;
+.userInput {
+  width: 90%;
+  min-width: 15rem;
+  min-height: 1.5rem;
+  max-height: 3rem;
+}
+
+.label {
+  font-size: var(--subheading-font-size);
+  font-weight: 500;
 }
 
 .descriptionContainer {
   display: flex;
-  min-width: 70%;
-  max-width: 70%;
+  flex-grow: 3;
   flex-direction: column;
   align-items: start;
 }
 
 .descriptionContainer textarea {
-  max-width: 90%;
-  min-height: 1.4rem;
-  max-height: 1.4rem;
-}
-
-h2 {
-  font-size: var(--heading-font-size);
-  margin-bottom: 3rem;
-}
-
-label {
-  margin-left: 0.7rem;
+  resize: vertical;
+  overflow: auto;
 }
 
 .buttonContainer {
   display: flex;
+  flex-grow: .25;
   justify-items: center;
   align-items: center;
-  height: 65%;
-  min-width: 8%;
+  min-height: 100%;
+  min-width: 4rem;
 }
 
 .createExerciseButton {
   display: flex;
-  justify-items: center;
   align-items: center;
   justify-content: center;
-  align-content: center;
-  width: 100%;
-  height: 100%;
   border-radius: 5px;
   transition: all .1s;
-  margin: 0 0;
+  margin: auto;
+  min-height: 5rem;
+  min-width: 9rem;
+  /* margin: 0 0; */
   /* padding: 1rem; */
 }
 
