--- a/src/components/registerForm/RegisterForm.module.css
+++ b/src/components/registerForm/RegisterForm.module.css
@@ -2,20 +2,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-items: center;
+    justify-content: center;
     width: 70%;
-    margin: auto;
+    /* margin: auto; */
     padding: 2rem;
     background-color: var(--background-color);
     border-radius: 10px;
+}
+
+.inputContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 97%;
+    max-width: 42rem;
+    margin-bottom: 1rem;
 }
 
 .inputWrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 38%;
-    margin-bottom: 1rem;
+    width: 97%;
+    max-width: 42rem;
     font-size: var(--body-font-size);
 }
 
@@ -25,9 +34,10 @@
     padding: 10px;
     margin: 0;
     font-size: 1em;
-    width: 100%;
+    width: 90%;
     transition: all .1s;
     min-width: 20rem;
+    max-width: 41rem;
     text-align: left;
 }
 
