--- a/src/components/exerciseCompleter/ExerciseCompleter.module.css
+++ b/src/components/exerciseCompleter/ExerciseCompleter.module.css
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    /* width: 100%; */
+    width: 100%;
     background-color: var(--primary-color);
     border-radius: 10px;
     padding: 1rem;
     margin: 1rem 0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border: var(--font-color) solid .15rem;
+    max-width: 55rem;
 }
 
 .exerciseTitle {
