--- a/src/components/genericList/GenericList.module.css
+++ b/src/components/genericList/GenericList.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--secondary-color);
+    margin: 0 auto;
 
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -24,12 +25,9 @@
     }
 }
 
-/* Vertical spacing between elements */
-.list>* {
-    /* width: 90%; */
-    margin: .5rem 0;
-}
-
 .childContainer {
+    display: flex;
+    justify-content: center;
     width: 90%;
+    margin: 0.5rem auto;
 }
