--- a/src/routes/loginPage/LoginPage.module.css
+++ b/src/routes/loginPage/LoginPage.module.css
@@ -9,3 +9,13 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.oauthContainer {
+    display: flex;
+    justify-items: center;
+    margin-top: 1rem;
+}
+
+.oauthContainer>* {
+    margin: 0 0.5rem;
+}
