--- a/src/components/oauthLogin/OAuthLogin.module.css
+++ b/src/components/oauthLogin/OAuthLogin.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-items: center;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -28,6 +29,7 @@
 .oauthLogo {
     width: 36px;
     height: 36px;
+    margin-top: 0.25rem;
     margin-bottom: 0.5rem;
 }
 
