--- a/src/components/heroSection/HeroSection.module.css
+++ b/src/components/heroSection/HeroSection.module.css
@@ -1,4 +1,5 @@
 /* These styles are shared with ExerciseSetPresenter */
+/*
 .container {
     display: flex;
     justify-content: space-between;
@@ -9,7 +10,6 @@
     width: 100%;
     height: 45vh;
     overflow: hidden;
-    /* Ensure the container hides overflow */
 }
 
 .heroText {
@@ -17,12 +17,8 @@
     font-weight: bold;
     color: var(--font-color);
     text-align: center;
-    /* Center the text */
     margin: auto;
-    /* Center the text vertically */
-    background: var(--background-color);
     border-radius: .5rem;
-    /* Add a subtle shadow */
     width: 50%;
     max-width: 50%;
 }
@@ -31,16 +27,13 @@
     width: 50%;
     height: 100%;
     overflow: hidden;
-    /* Hide overflow */
     position: relative;
 }
 
 .heroImg img {
     width: 95%;
     height: 95%;
-    /* image will be scaled to cover the entire container, while maintaining its aspect ratio. */
     object-fit: cover;
-    /* Crop the image */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -48,11 +41,51 @@
 
     border-radius: .8rem;
 }
+*/
+.container {
+    height: 80vh;
+    background-image: linear-gradient(to right top,
+            #016565ba,
+            #029797ba),
+        url('../../../public/images/hero.png');
+    background-size: cover;
+    background-position: top;
+
+    clip-path: polygon(0 10%, 100% 0, 100% 85%, 0 100%);
+    position: relative;
+
+    backface-visibility: hidden;
+}
+
+.heroWrapper {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+
+    text-align: center;
+}
+
+.heroText {
+    font-size: 4rem;
+    font-weight: bold;
+    color: var(--font-color);
+    text-justify: auto;
+    text-align: center;
+}
+
+.heroMain {
+    animation: fadeIn 1s ease-in;
+}
 
 .heroAccent {
     color: var(--accent-color);
     position: relative;
     display: inline-block;
+
+    animation: fadeIn 1s ease-out 1.2s;
+    animation-fill-mode: backwards;
 }
 
 .heroAccent::after {
@@ -72,4 +105,64 @@
 
 span {
     margin: 0;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.buttonHero {
+    /* Reference for ::after */
+    position: relative;
+    font-size: 1rem;
+    margin-top: 5rem;
+    display: inline;
+    background-color: white;
+    color: #4a4a4a;
+    border-radius: 10rem;
+    padding: 1rem 1.4rem;
+    animation: fadeIn 1s ease-in 1.6s;
+    animation-fill-mode: backwards;
+
+    transition: all .2s;
+}
+
+.buttonHero:hover {
+    transform: translateY(-.5rem);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
+    background-color: white;
+}
+
+.buttonHero:active {
+    transform: translateY(-.3rem);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
+    background-color: white;
+}
+
+.buttonHero::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    z-index: -1;
+    width: 98%;
+    height: 98%;
+    opacity: 1;
+    border-radius: 10rem;
+
+    transition: all .2s;
+}
+
+.buttonHero:hover::after {
+    transform: scaleX(1.5) scaleY(1.7);
+    background-color: white;
+    z-index: -1;
+    opacity: 0;
 }
