Implementing features section, Changed grey colors

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,13 +5,13 @@ $color-primary-dark: #03B670;
 
 $color-secondary: #F78E2C;
 
-$color-grey-light-1: #B7BAB8;
-$color-grey-light-2: #c3c6c4;
-$color-grey-light-3: #d7dad8;
+$color-grey-light-1: #c3c6c4;
+$color-grey-light-2: #dde0de;
+$color-grey-light-3: #f1f4f2;
 
 $color-grey-dark-1: #AAADAB;
-$color-grey-dark-2: #979a98;
-$color-grey-dark-3: #858886;
+$color-grey-dark-2: #858886;
+$color-grey-dark-3: #575a58;
 
 $color-white: #fff;
 $color-black: #000;
