--- a/src/css/style.css
+++ b/src/css/style.css
@@ -227,7 +227,7 @@ body {
   background-color: #fff;
   width: 85%;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-  padding: 2rem 1.5rem;
+  padding: 6rem 1.5rem;
   border-radius: 0.3rem;
   transition: all 0.5s;
 }
@@ -240,6 +240,55 @@ body {
   color: #fff;
 }
 
+.benefit {
+  perspective: 100rem;
+  filter: drop-shadow(0 0.5rem 1rem rgba(0, 0, 0, 0.15));
+  position: relative;
+  z-index: 10;
+  transition: all 0.2s ease-out;
+}
+.benefit:hover {
+  transform: translateY(-1.6rem) scale(1.1);
+  filter: drop-shadow(0 1rem 2rem rgba(0, 0, 0, 0.3));
+  z-index: 20;
+}
+.benefit:hover .benefit__shape {
+  transform: rotateX(180deg);
+}
+.benefit__shape {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 100%;
+  height: 100%;
+  padding: 10rem 0;
+  transition: all 0.2s ease-out;
+  background-color: orangered;
+}
+.benefit__shape--start {
+  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+  padding-left: 6rem;
+  align-items: flex-start;
+}
+.benefit__shape--middle {
+  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+}
+.benefit__shape--end {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 25% 50%);
+  padding-right: 6rem;
+  align-items: flex-end;
+}
+.benefit__list {
+  display: block;
+  font-size: 1.8rem;
+  list-style: none;
+}
+.benefit__title {
+  display: block;
+  font-size: 2.5rem;
+  font-weight: 500;
+}
 .landing {
   display: grid;
   grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] min-content [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
@@ -254,6 +303,17 @@ body {
   grid-row-gap: 6rem;
   color: #575a58;
   background-color: #f1f4f2;
+}
+
+.benefits {
+  display: grid;
+  align-items: stretch;
+  padding: 6rem 6rem;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-column-gap: 0rem;
+  grid-row-gap: 6rem;
+  background-color: #c3c6c4;
+  grid-row: benefits-start/benefits-end;
 }
 
 /*# sourceMappingURL=style.css.map */
