--- a/src/sass/components/_benefit.scss
+++ b/src/sass/components/_benefit.scss
@@ -6,7 +6,7 @@
 
     position: relative;
     z-index: 10;
-    $shared-transition: all .2s ease-out;
+    $shared-transition: all .4s ease-in;
 
     transition: $shared-transition;
 
@@ -17,8 +17,12 @@
         z-index: 20;
     }
 
-    &:hover &__shape {
+    &:hover &__front-side {
         transform: rotateX(180deg);
+    }
+
+    &:hover &__back-side {
+        transform: rotateX(360deg);
     }
 
     &__shape {
@@ -64,7 +68,20 @@
         font-weight: 500;
     }
 
-    &__front-side {}
+    &__front-side,
+    &__back-side {
+        backface-visibility: hidden;
+    }
 
-    &__back-side {}
+    &__front-side {
+        background-color: blue;
+    }
+
+    &__back-side {
+        position: absolute;
+        transform: rotateX(180deg);
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
 }
