--- a/src/sass/components/_benefit.scss
+++ b/src/sass/components/_benefit.scss
@@ -10,6 +10,8 @@
 
     transition: $shared-transition;
 
+    $middle-polygon: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+
     &:hover {
         transform: translateY(-1.6rem) scale(1.1);
         filter: drop-shadow(0 1rem 2rem rgba($color-black, 0.3));
@@ -36,8 +38,84 @@
         transition: $shared-transition;
 
         $padding-before-and-after: 6rem;
+        $overlay: linear-gradient(to right bottom,
+                rgba($color-primary-light, 0.7),
+                rgba($color-primary-light, 0.7));
 
-        background-color: orangered;
+        &--1 {
+            &.benefit {
+                &__front-side {
+                    // TODO change image
+                    background-image: $overlay, url('../../public/images/CTA3.png');
+                    background-size: cover;
+                }
+
+                &__back-side {
+
+                    // TODO change image
+                    &::before {
+                        @include image-in-backside('../../public/images/CTA3.png',
+                            $overlay);
+                    }
+                }
+            }
+        }
+
+        &--2 {
+            &.benefit {
+                &__front-side {
+                    // TODO change image
+                    background-image: $overlay, url('../../public/images/CTA2.png');
+                    background-size: cover;
+                }
+
+                &__back-side {
+                    &::before {
+                        // TODO change image
+                        @include image-in-backside('../../public/images/CTA2.png',
+                            $overlay);
+                    }
+                }
+            }
+        }
+
+        &--3 {
+            &.benefit {
+                &__front-side {
+                    // TODO change image
+                    background-image: $overlay, url('../../public/images/CTA3.png');
+                    background-size: cover;
+                }
+
+                &__back-side {
+
+                    // TODO change image
+                    &::before {
+                        @include image-in-backside('../../public/images/CTA3.png',
+                            $overlay);
+                    }
+                }
+            }
+        }
+
+        &--4 {
+            &.benefit {
+                &__front-side {
+                    // TODO change image
+                    background-image: $overlay, url('../../public/images/CTA1.png');
+                    background-size: cover;
+                }
+
+                &__back-side {
+
+                    // TODO change image
+                    &::before {
+                        @include image-in-backside('../../public/images/CTA1.png',
+                            $overlay);
+                    }
+                }
+            }
+        }
 
         &--start {
             clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
@@ -46,7 +124,7 @@
         }
 
         &--middle {
-            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+            clip-path: $middle-polygon;
         }
 
         &--end {
@@ -71,10 +149,6 @@
     &__front-side,
     &__back-side {
         backface-visibility: hidden;
-    }
-
-    &__front-side {
-        background-color: blue;
     }
 
     &__back-side {
