Improved styling of benefit component (front side)

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -4,6 +4,8 @@ $color-primary-light: #4BDE94;
 $color-primary-dark: #03B670;
 
 $color-secondary: #F78E2C;
+$color-secondary-light: #ffa45b;
+$color-secondary-dark: #f08822;
 
 $color-grey-light-1: #c3c6c4;
 $color-grey-light-2: #dde0de;
