--- a/src/css/style.css
+++ b/src/css/style.css
@@ -246,10 +246,14 @@ body {
   position: relative;
   z-index: 10;
   transition: all 0.4s ease-in;
+  transform: scale(1.2);
+}
+.benefit__shape > * {
+  transform: scale(0.8);
 }
 .benefit:hover {
-  transform: translateY(-1.6rem) scale(1.1);
-  filter: drop-shadow(0 1rem 2rem rgba(0, 0, 0, 0.3));
+  transform: translateY(-1.8rem) scale(1.4);
+  filter: drop-shadow(0 2rem 2rem rgba(0, 0, 0, 0.8));
   z-index: 20;
 }
 .benefit:hover .benefit__front-side {
@@ -352,6 +356,9 @@ body {
 .benefit__shape--middle {
   clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
 }
+.benefit__shape--middle .benefit__title {
+  margin-left: 15%;
+}
 .benefit__shape--end {
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 25% 50%);
   padding-right: 6rem;
@@ -363,9 +370,16 @@ body {
   list-style: none;
 }
 .benefit__title {
-  display: block;
-  font-size: 2.5rem;
-  font-weight: 500;
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-image: linear-gradient(to right, #ffa45b, #f08822);
+  font-size: 3rem;
+  font-weight: 600;
+  color: #fff;
+  letter-spacing: 1.1rem;
+  border-radius: 0.3rem;
+  text-align: center;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 .benefit__front-side, .benefit__back-side {
   backface-visibility: hidden;
@@ -380,7 +394,7 @@ body {
 
 .landing {
   display: grid;
-  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] min-content [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
+  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] minmax(min-content, 50vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
 }
 
 .features {
@@ -397,8 +411,8 @@ body {
 .benefits {
   display: grid;
   align-items: stretch;
-  padding: 6rem 6rem;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  padding: 10rem 7rem;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-column-gap: 0rem;
   grid-row-gap: 6rem;
   background-color: #c3c6c4;
