--- a/src/sass/pages/_landing-page.scss
+++ b/src/sass/pages/_landing-page.scss
@@ -25,7 +25,8 @@
 .benefits {
     display: grid;
 
-    align-items: stretch;
+    align-content: center;
+    justify-content: center;
 
     padding: 10rem 7rem;
 
