--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Basix reset */
 *,
 *::after,
@@ -243,17 +244,17 @@ body {
 .benefit {
   perspective: 100rem;
   filter: drop-shadow(0 0.5rem 1rem rgba(0, 0, 0, 0.15));
+  width: 115%;
+  height: 115%;
   position: relative;
   z-index: 10;
   transition: all 0.4s ease-in;
-  transform: scale(1.2);
-}
-.benefit__shape > * {
-  transform: scale(0.8);
 }
 .benefit:hover {
-  transform: translateY(-1.8rem) scale(1.4);
   filter: drop-shadow(0 2rem 2rem rgba(0, 0, 0, 0.8));
+  width: 130%;
+  height: 130%;
+  transform: translate(-12%, -15%);
   z-index: 20;
 }
 .benefit:hover .benefit__front-side {
@@ -287,13 +288,10 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA3.png");
+  background-image: linear-gradient(to right bottom, #4BDE94, #03B670);
   background-size: cover;
   background-position: center;
-  filter: blur(3px);
-  /* Adjust filter settings here */
   z-index: -1;
-  /* Place the background behind the content */
 }
 .benefit__shape--2.benefit__front-side {
   background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA2.png");
@@ -306,13 +304,10 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA2.png");
+  background-image: linear-gradient(to right bottom, #4BDE94, #03B670);
   background-size: cover;
   background-position: center;
-  filter: blur(3px);
-  /* Adjust filter settings here */
   z-index: -1;
-  /* Place the background behind the content */
 }
 .benefit__shape--3.benefit__front-side {
   background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA3.png");
@@ -325,13 +320,10 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA3.png");
+  background-image: linear-gradient(to right bottom, #4BDE94, #03B670);
   background-size: cover;
   background-position: center;
-  filter: blur(3px);
-  /* Adjust filter settings here */
   z-index: -1;
-  /* Place the background behind the content */
 }
 .benefit__shape--4.benefit__front-side {
   background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA1.png");
@@ -344,13 +336,10 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to right bottom, rgba(75, 222, 148, 0.7), rgba(75, 222, 148, 0.7)), url("../../public/images/CTA1.png");
+  background-image: linear-gradient(to right bottom, #4BDE94, #03B670);
   background-size: cover;
   background-position: center;
-  filter: blur(3px);
-  /* Adjust filter settings here */
   z-index: -1;
-  /* Place the background behind the content */
 }
 .benefit__shape--start {
   clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
@@ -373,6 +362,11 @@ body {
   font-size: 1.8rem;
   list-style: none;
   align-self: center;
+  position: relative;
+  z-index: 2;
+}
+.benefit__item {
+  font-size: 9rem;
 }
 .benefit__title {
   display: inline-block;
@@ -397,6 +391,36 @@ body {
   width: 100%;
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
+.benefit__cta {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.benefit__cta:hover {
+  color: #F78E2C;
+}
+
+.simple-btn {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  border-bottom: 0.2rem solid currentColor;
+  transition: all 0.2s;
+  text-align: left;
+  cursor: pointer;
+}
+.simple-btn::after {
+  content: "→";
+  color: currentColor;
+  margin-left: 1rem;
+  display: inline-block;
+  transition: all 0.2s;
+}
+.simple-btn:hover {
+  transform: translateY(-0.2rem);
+}
+.simple-btn:hover::after {
+  margin-left: 1.5rem;
+}
 
 .landing {
   display: grid;
@@ -417,7 +441,8 @@ body {
 
 .benefits {
   display: grid;
-  align-items: stretch;
+  align-content: center;
+  justify-content: center;
   padding: 10rem 7rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-column-gap: 0rem;
