--- a/src/css/style.css
+++ b/src/css/style.css
@@ -443,7 +443,7 @@ body {
   display: grid;
   align-content: center;
   justify-content: center;
-  padding: 10rem 7rem;
+  padding: 10rem 12rem 10rem 4rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-column-gap: 0rem;
   grid-row-gap: 9rem;
