Fixed benefits layout. Styled back side. Added text to back side.

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $color-grey-light-3: #f1f4f2;
 $color-grey-dark-1: #AAADAB;
 $color-grey-dark-2: #858886;
 $color-grey-dark-3: #575a58;
+$color-grey-dark-4: #3c3f3d;
+$color-grey-dark-5: #2d302e;
 
 $color-white: #fff;
 $color-black: #000;
