--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,7 @@ html {
 body {
   box-sizing: border-box;
   background-color: #e9e9e9;
+  overflow-x: hidden;
 }
 
 ::selection {
@@ -254,7 +255,7 @@ body {
   filter: drop-shadow(0 2rem 2rem rgba(0, 0, 0, 0.8));
   width: 130%;
   height: 130%;
-  transform: translate(-12%, -15%);
+  transform: translate(0, -15%);
   z-index: 20;
 }
 .benefit:hover .benefit__front-side {
@@ -358,15 +359,38 @@ body {
   align-items: flex-end;
 }
 .benefit__list {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-items: center;
   font-size: 1.8rem;
   list-style: none;
-  align-self: center;
   position: relative;
   z-index: 2;
 }
 .benefit__item {
-  font-size: 9rem;
+  color: #3c3f3d;
+  display: block;
+  text-align: center;
+}
+.benefit__item:not(:last-child) {
+  margin-bottom: 0.25rem;
+}
+.benefit__item::after {
+  content: "";
+  display: block;
+  width: 87%;
+  height: 1px;
+  margin: 1rem auto;
+  background-color: #f1f4f2;
+}
+.benefit__item:first-child::before {
+  content: "";
+  display: block;
+  width: 87%;
+  height: 1px;
+  margin: 1rem auto;
+  background-color: #f1f4f2;
 }
 .benefit__title {
   display: inline-block;
@@ -384,6 +408,11 @@ body {
   backface-visibility: hidden;
 }
 .benefit__back-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0;
   position: absolute;
   transform: rotateX(180deg);
   top: 0;
@@ -392,18 +421,27 @@ body {
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 .benefit__cta {
-  font-size: 1.5rem;
+  display: inline-block;
+  font-size: 1.6rem;
+  font-weight: 400;
+  padding: 1rem 2rem;
+  border-radius: 0.3rem;
   color: #fff;
+  background-image: linear-gradient(to right, #f08822, #ffa45b);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 .benefit__cta:hover {
-  color: #F78E2C;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+}
+.benefit__cta:active {
+  box-shadow: 0 0.75rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .simple-btn {
   border: none;
   background-color: transparent;
   font-family: inherit;
-  border-bottom: 0.2rem solid currentColor;
+  border-bottom: 1px solid currentColor;
   transition: all 0.2s;
   text-align: left;
   cursor: pointer;
@@ -421,10 +459,16 @@ body {
 .simple-btn:hover::after {
   margin-left: 1.5rem;
 }
+.simple-btn:active {
+  transform: translateY(-0.1rem);
+}
+.simple-btn--no-border {
+  border-bottom: none;
+}
 
 .landing {
   display: grid;
-  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] minmax(min-content, 50vh) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
+  grid-template-rows: [nav-start] 7rem [nav-end hero-start] 90vh [hero-end future-start] min-content [future-end benefits-start] minmax(min-content, 50%) [benefits-end features-start] min-content [features-end testimonials-start] min-content [testimonials-end];
 }
 
 .features {
@@ -443,12 +487,18 @@ body {
   display: grid;
   align-content: center;
   justify-content: center;
-  padding: 10rem 12rem 10rem 4rem;
+  align-items: stretch;
+  padding: 10rem 12rem 13.5rem 4rem;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-column-gap: 0rem;
-  grid-row-gap: 9rem;
+  grid-row-gap: 0;
+  /* Add row gap only if there's more than one row */
   background-color: #c3c6c4;
   grid-row: benefits-start/benefits-end;
+}
+.benefits:has(.benefit:nth-child(-n+3)) {
+  /* Aplica un row-gap solo si hay 3 elementos o menos */
+  grid-row-gap: 9rem;
 }
 
 /*# sourceMappingURL=style.css.map */
