--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -22,6 +22,7 @@ html {
 body {
     box-sizing: border-box;
     background-color: #e9e9e9;
+    overflow-x: hidden;
 }
 
 // Style of selected text, images, etc.
